[package]
name = "bamf"
version = "0.1.0"
authors = ["Spencer L. Nystrom <snystrom@users.noreply.github.com>"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib = {version = "*", default-features = false}
structopt = "*"
histogram = "*"
