[package]
name = "bamf"
version = "0.1.9"
authors = ["Spencer L. Nystrom <snystrom@users.noreply.github.com>"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib = {version = "0.36", default-features = false}
structopt = "0.3.17"
histogram = "0.6.9"
